--- a/src/main/resources/assets/matyimod/models/item/sapphire_staff_2d.json
+++ b/src/main/resources/assets/matyimod/models/item/sapphire_staff_2d.json
@@ -1,6 +1,6 @@
 {
   "parent": "minecraft:item/handheld",
   "textures": {
-    "layer0": "matyi:item/sapphire_staff"
+    "layer0": "matyimod:item/sapphire_staff"
   }
 }
