--- a/src/main/resources/assets/matyimod/models/item/sapphire_staff_3d.json
+++ b/src/main/resources/assets/matyimod/models/item/sapphire_staff_3d.json
@@ -2,8 +2,8 @@
 	"credit": "Made with Blockbench",
 	"texture_size": [32, 32],
 	"textures": {
-		"0": "matyi:item/sapphire_staff_3d",
-		"particle": "matyi:item/sapphire_staff_3d"
+		"0": "matyimod:item/sapphire_staff_3d",
+		"particle": "matyimod:item/sapphire_staff_3d"
 	},
 	"elements": [
 		{
